// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TopViolationsModule clusters view renders as expected 1`] = `
<div
  className="module-top-violations"
>
  <div
    className="header-container"
  >
    <div
      className="header-title hasChoice"
    >
      Top 3 violations
    </div>
    <div
      aria-invalid={undefined}
      aria-label="Top 3 violations"
      className="bx--dropdown selection bx--list-box"
      data-invalid={undefined}
      onClick={[Function]}
      onKeyDown={[Function]}
      role="listbox"
      tabIndex={null}
    >
      <div
        aria-expanded={false}
        aria-haspopup={true}
        aria-label="open menu"
        className="bx--list-box__field"
        data-toggle={true}
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex="0"
        type="button"
      >
        <span
          className="bx--list-box__label"
          htmlFor="downshift-0-input"
        >
          Clusters
        </span>
        <div
          className="bx--list-box__menu-icon"
        >
          <svg
            alt="Open menu"
            aria-label="Open menu"
            className={undefined}
            fill={undefined}
            fillRule="evenodd"
            focusable="false"
            height="5"
            name={undefined}
            role="img"
            style={undefined}
            viewBox="0 0 10 5"
            width="10"
          >
            <title>
              Open menu
            </title>
            <path
              d="M0 0l5 4.998L10 0z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className="card-container-container"
    >
      <div>
        <div
          className="card-container"
        >
          <div
            className="card-content"
          >
            <div
              className="card-inner-content"
            >
              <div
                className="card-violations"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="button"
                tabIndex="0"
              >
                <div
                  className="card-violation-count alert"
                >
                  3
                </div>
                <div
                  className="card-violation-type"
                >
                  {0} VIOLATIONS
                </div>
              </div>
              <div
                className="card-name-description"
              >
                <div
                  className="card-name"
                >
                  cluster1
                </div>
                <div
                  className="card-description"
                >
                  <a
                    className="card-each-description-link"
                    href="undefined/policies/all/mcm/compliance-all/compliancePolicy/compliance-all/policy-comp"
                    onClick={[Function]}
                  >
                    compliance-all
                  </a>
                  , 
                  <a
                    className="card-each-description-link"
                    href="undefined/policies/all/mcm/policy-ma/compliancePolicy/policy-ma/policy-comp"
                    onClick={[Function]}
                  >
                    policy-ma
                  </a>
                  , 
                  <a
                    className="card-each-description-link"
                    href="undefined/policies/all/mcm/policy-pod/compliancePolicy/policy-pod/policy-comp"
                    onClick={[Function]}
                  >
                    policy-pod
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          className="card-container"
        >
          <div
            className="card-content"
          >
            <div
              className="card-inner-content"
            >
              <div
                className="card-violations"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="button"
                tabIndex="0"
              >
                <div
                  className="card-violation-count alert"
                >
                  2
                </div>
                <div
                  className="card-violation-type"
                >
                  {0} VIOLATIONS
                </div>
              </div>
              <div
                className="card-name-description"
              >
                <div
                  className="card-name"
                >
                  clusterhub
                </div>
                <div
                  className="card-description"
                >
                  <a
                    className="card-each-description-link"
                    href="undefined/policies/all/mcm/compliance-all/compliancePolicy/compliance-all/policy-comp"
                    onClick={[Function]}
                  >
                    compliance-all
                  </a>
                  , 
                  <a
                    className="card-each-description-link"
                    href="undefined/policies/all/mcm/policy-pod/compliancePolicy/policy-pod/policy-comp"
                    onClick={[Function]}
                  >
                    policy-pod
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TopViolationsModule policies view renders as expected 1`] = `
<div
  className="module-top-violations"
>
  <div
    className="header-container"
  >
    <div
      className="header-title hasChoice"
    >
      Top 3 violations
    </div>
    <div
      aria-invalid={undefined}
      aria-label="Top 3 violations"
      className="bx--dropdown selection bx--list-box"
      data-invalid={undefined}
      onClick={[Function]}
      onKeyDown={[Function]}
      role="listbox"
      tabIndex={null}
    >
      <div
        aria-expanded={false}
        aria-haspopup={true}
        aria-label="open menu"
        className="bx--list-box__field"
        data-toggle={true}
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex="0"
        type="button"
      >
        <span
          className="bx--list-box__label"
          htmlFor="downshift-1-input"
        >
          Clusters
        </span>
        <div
          className="bx--list-box__menu-icon"
        >
          <svg
            alt="Open menu"
            aria-label="Open menu"
            className={undefined}
            fill={undefined}
            fillRule="evenodd"
            focusable="false"
            height="5"
            name={undefined}
            role="img"
            style={undefined}
            viewBox="0 0 10 5"
            width="10"
          >
            <title>
              Open menu
            </title>
            <path
              d="M0 0l5 4.998L10 0z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className="card-container-container"
    >
      <div>
        <div
          className="card-container"
        >
          <div
            className="card-content"
          >
            <div
              className="card-inner-content"
            >
              <div
                className="card-violations"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="button"
                tabIndex="0"
              >
                <div
                  className="card-violation-count alert"
                >
                  3
                </div>
                <div
                  className="card-violation-type"
                >
                  {0} VIOLATIONS
                </div>
              </div>
              <div
                className="card-name-description"
              >
                <div
                  className="card-name"
                >
                  cluster1
                </div>
                <div
                  className="card-description"
                >
                  <a
                    className="card-each-description-link"
                    href="undefined/policies/all/mcm/1558374675051-policy-pod/compliancePolicy/1558374675051-policy-pod/cluster1"
                    onClick={[Function]}
                  >
                    1558374675051-policy-pod
                  </a>
                  , 
                  <a
                    className="card-each-description-link"
                    href="undefined/policies/all/mcm/1558382034240-policy-pod/compliancePolicy/1558382034240-policy-pod/cluster1"
                    onClick={[Function]}
                  >
                    1558382034240-policy-pod
                  </a>
                  , 
                  <a
                    className="card-each-description-link"
                    href="undefined/policies/all/mcm/policy-pod/compliancePolicy/policy-pod/cluster1"
                    onClick={[Function]}
                  >
                    policy-pod
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          className="card-container"
        >
          <div
            className="card-content"
          >
            <div
              className="card-inner-content"
            >
              <div
                className="card-violations"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="button"
                tabIndex="0"
              >
                <div
                  className="card-violation-count alert"
                >
                  3
                </div>
                <div
                  className="card-violation-type"
                >
                  {0} VIOLATIONS
                </div>
              </div>
              <div
                className="card-name-description"
              >
                <div
                  className="card-name"
                >
                  clusterhub
                </div>
                <div
                  className="card-description"
                >
                  <a
                    className="card-each-description-link"
                    href="undefined/policies/all/mcm/1558374675051-policy-pod/compliancePolicy/1558374675051-policy-pod/clusterhub"
                    onClick={[Function]}
                  >
                    1558374675051-policy-pod
                  </a>
                  , 
                  <a
                    className="card-each-description-link"
                    href="undefined/policies/all/mcm/1558382034240-policy-pod/compliancePolicy/1558382034240-policy-pod/clusterhub"
                    onClick={[Function]}
                  >
                    1558382034240-policy-pod
                  </a>
                  , 
                  <a
                    className="card-each-description-link"
                    href="undefined/policies/all/mcm/policy-pod/compliancePolicy/policy-pod/clusterhub"
                    onClick={[Function]}
                  >
                    policy-pod
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
